# mail-builder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.eml
.github/workflows/: rust.yml
examples/: multipart_message.rs  nested_message.rs  simple_message.rs
src/: base64.rs  encode.rs  lib.rs  mime.rs  quoted_printable.rs
src/encoders/: base64.rs  encode.rs  mod.rs  quoted_printable.rs
src/headers/: address.rs  content_type.rs  date.rs  message_id.rs  mod.rs  raw.rs  text.rs  url.rs
