[package]
name = "mail-builder"
description = "E-mail builder library for Rust"
version = "0.0.1"
edition = "2018"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-builder"
homepage = "https://github.com/stalwartlabs/mail-builder"
keywords = ["email", "mime", "mail", "e-mail"]
categories = ["email"]
readme = "README.md"

[dependencies]
gethostname = "0.2.2"
chrono = "0.4"
